--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,6 +10,7 @@
         {% for post in posts %}
             <div>
                 <h1><a href="">{{ post.title }}</a></h1>
+                <h2>poo</h2>
                 <p>Published: {{ post.published_date }}</p>
                 <p>{{ post.text|linebreaksbr }}</p>
             </div>
